30-tools/elastic-batch/elastic-batch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-batch
  labels:
    app: elasticsearch-batch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-batch
  template:
    metadata:
      labels:
        app: elasticsearch-batch
    spec:
      containers:
        - name: elasticsearch-batch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.13.2
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
          securityContext:
            capabilities:
              add: ["ALL"]
            privileged: true
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-batch-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-batch
  labels:
    app: elasticsearch-batch
spec:
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: http
    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: transport
  selector:
    app: elasticsearch-batch
  type: ClusterIP
