30-tools/elastic-batch/kibana-batch.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-batch
  labels:
    app: kibana-batch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana-batch
  template:
    metadata:
      labels:
        app: kibana-batch
    spec:
      containers:
        - name: kibana-batch
          image: docker.elastic.co/kibana/kibana:8.6.2
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          securityContext:
            capabilities:
              add: ["ALL"]
          ports:
            - containerPort: 5601
              name: http
          volumeMounts:
            - name: kibana-data
              mountPath: /usr/share/kibana/data
      volumes:
        - name: kibana-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-batch
  labels:
    app: kibana-batch
spec:
  ports:
    - port: 80
      targetPort: 5601
      protocol: TCP
      name: http
  selector:
    app: kibana-batch
  type: ClusterIP
