30-tools/elastic-batch/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-batch
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana-batch.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-batch
                port:
                  number: 80
  tls:
    - hosts:
        - kibana-batch.check-consulting.net
      secretName: kibana-batch-tls
